[package]
name = "home-config"
version = "0.6.0"
edition = "2021"
description = "Use configuration file in the HOME directory"
homepage = "https://github.com/wyhaya/home-config"
repository = "https://github.com/wyhaya/home-config.git"
authors = ["wyhaya <hi@wyhaya.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "home",
    "config",
    "json",
    "yaml",
    "toml",
    "hcl"
]

[package.metadata.docs.rs]
features = ["json", "yaml", "toml", "hcl"]

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
yaml = ["dep:serde", "dep:serde_yaml"]
toml = ["dep:serde", "dep:toml"]
hcl = ["dep:serde", "dep:hcl-rs"]

[dependencies]
dirs = "4.0.0"
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_json = { version = "1.0.87", optional = true }
serde_yaml = { version = "0.9.14", optional = true }
toml = { version = "0.5.9", optional = true }
hcl-rs = { version = "0.9.0", optional = true }